# Game_1

./: .gitignore  partition_custom.csv  platformio.ini
.pio/libdeps/wemos_d1_mini32/: lv_conf.h
.pio/libdeps/wemos_d1_mini32/TFT_eSPI/: User_Setup.h
.pio/libdeps/wemos_d1_mini32/TFT_eSPI/Processors/: TFT_eSPI_ESP32.c  TFT_eSPI_ESP32.h
.pio/libdeps/wemos_d1_mini32/lvgl/examples/anim/: lv_example_anim_2.c
.pio/libdeps/wemos_d1_mini32/ui/src/: ui.c
.pio/libdeps/wemos_d1_mini32/ui_old/src/: ui.c  ui_events.h  ui_helpers.c  ui_helpers.h
.pio/libdeps/wemos_d1_mini32_LVGL_1Pok_SPI_Velky/: lv_conf.h
.pio/libdeps/wemos_d1_mini32_LVGL_1Pok_SPI_Velky/TFT_eSPI/: User_Setup.h
.pio/libdeps/wemos_d1_mini32_LVGL_1Pok_SPI_Velky/ui_old/src/: ui.h
Doska/: Hra.PrjPCB  PCB1.PcbDoc  schema.SchDoc
Doska/__Previews/: PCB1.PcbDocPreview  schema.SchDocPreview
include/freertos/: FreeRTOSConfig.h
src/: main.cpp
src/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
src/ui/src/components/: ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_statuspanel.c  ui_comp_statuspanel.h
src/ui/src/images/: ui_img_1771879469.c  ui_img_210898296.c  ui_img_391577990.c  ui_img_ami1_png.c  ui_img_ami2_png.c  ui_img_ami3_mirrored_png.c  ui_img_ami3_png.c  ui_img_brickball_png.c  ui_img_pot_ver_knob_png.c  ui_img_pot_ver_line_png.c  ui_img_wolf2_png.c  ui_img_wolf_png.c  ui_img_wolfbg_png.c  ui_img_wolflayout2_png.c  ui_img_wolflayout3_png.c  ui_img_wolflayout7_png.c
src/ui/src/screens/: ui_BrickBall.c  ui_Menu.c  ui_Screen1.c  ui_Settings.c  ui_Wolf.c
(+39 files in other folders)
